# genshinblkstuff

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  read.py  read2.py  unity_types.py
AssetExtractor/: AssetItem.cs  AssetsManager.cs  BinaryReaderExtensions.cs  Exporter.cs  FileReader.cs  Program.cs  ResourceReader.cs  SerializedFile.cs  StringBuilder.cs  TypeTree.cs  TypeTreeHelper.cs  TypeTreeNode.cs
AssetExtractor/Classes/: Component.cs  Object.cs
bc7/: bcn.cc  bcn.h  main.cc
blkstuff/: blkstuff.vcxproj  blkstuff.vcxproj.filters  main.cpp
src/: aes.c  main.cpp
